--- a/resources/fxml/start.fxml
+++ b/resources/fxml/start.fxml
@@ -2,14 +2,14 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.StartController">
-  <columnConstraints>
+
+    <columnConstraints>
     <ColumnConstraints hgrow="ALWAYS" />
       <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="ALWAYS" maxWidth="136.66666666666663" minWidth="0.0" prefWidth="136.66666666666663" />
@@ -78,11 +78,11 @@
             <items>
                   <MenuItem fx:id="menuCreateAcc" onAction="#actionRegister" text="%createAcc">
                      <accelerator>
-                        <KeyCodeCombination alt="ANY" code="C" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                        <KeyCodeCombination alt="ANY" code="C" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></MenuItem>
               <MenuItem fx:id="menuExit" onAction="#actionExit" text="%exit">
                      <accelerator>
-                        <KeyCodeCombination alt="ANY" code="X" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                        <KeyCodeCombination alt="ANY" code="X" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></MenuItem>
             </items>
           </Menu>
@@ -90,30 +90,30 @@
                <items>
                   <Menu fx:id="menuLanguage" text="%language">
                     <items>
-                      <MenuItem onAction="#actionBosanski" text="Bosanski">
-                           <accelerator>
-                              <KeyCodeCombination alt="ANY" code="B" control="ANY" meta="UP" shift="UP" shortcut="UP" />
-                           </accelerator></MenuItem>
+                      <MenuItem onAction="#actionBosanski" text="Bosanski" />
                         <MenuItem onAction="#actionEnglish" text="English">
                            <accelerator>
                               <KeyCodeCombination alt="ANY" code="E" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator></MenuItem>
                     </items>
                      <accelerator>
-                        <KeyCodeCombination alt="ANY" code="L" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                        <KeyCodeCombination alt="ANY" code="L" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator>
                   </Menu>
                   <Menu fx:id="menuTheme" text="%theme">
                     <items>
                       <MenuItem fx:id="menuLight" onAction="#actionLightTheme" text="%lightTheme">
                            <accelerator>
-                              <KeyCodeCombination alt="ANY" code="L" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                              <KeyCodeCombination alt="ANY" code="G" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator></MenuItem>
                         <MenuItem fx:id="menuDark" onAction="#actionDarkTheme" text="%darkTheme">
                            <accelerator>
                               <KeyCodeCombination alt="ANY" code="D" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator></MenuItem>
                     </items>
+                     <accelerator>
+                        <KeyCodeCombination alt="ANY" code="T" control="ANY" meta="UP" shift="UP" shortcut="UP" />
+                     </accelerator>
                   </Menu>
                </items>
                <accelerator>
@@ -124,15 +124,15 @@
             <items>
                   <MenuItem fx:id="menuItemHelp" mnemonicParsing="false" onAction="#actionHelp" text="%help">
                      <accelerator>
-                        <KeyCodeCombination alt="ANY" code="H" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                        <KeyCodeCombination alt="ANY" code="H" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></MenuItem>
               <MenuItem fx:id="menuAbout" onAction="#actionAbout" text="%about">
                      <accelerator>
-                        <KeyCodeCombination alt="ANY" code="A" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                        <KeyCodeCombination alt="ANY" code="A" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></MenuItem>
                   <MenuItem fx:id="menuKeyboard" mnemonicParsing="false" onAction="#actionKeyboardShortcuts" text="%keyboardShortcuts">
                      <accelerator>
-                        <KeyCodeCombination alt="ANY" code="K" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                        <KeyCodeCombination alt="ANY" code="K" control="ANY" meta="UP" shift="UP" shortcut="UP" />
                      </accelerator></MenuItem>
             </items>
                <accelerator>
