--- a/resources/fxml/checkout.fxml
+++ b/resources/fxml/checkout.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
-<?import java.net.URL?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.CheckoutController">
    <stylesheets>
       <URL value="@/css/text_field_custom.css" />
@@ -39,6 +40,8 @@
       <RadioButton fx:id="rbDelivery" mnemonicParsing="false" text="%delivery" toggleGroup="$paymentGroup" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="1" />
       <TextField fx:id="fldCreditCard" GridPane.columnSpan="2" GridPane.rowIndex="3" />
       <Label text="%enterCreditCardNumber" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onAction="#actionPrintReport" text="%printReport" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+
       <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="7">
          <buttons>
             <Button defaultButton="true" mnemonicParsing="false" onAction="#actionConfirm" text="%confirmPayment" />
@@ -50,7 +53,7 @@
       <Label text="%phone" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="4" />
       <TextField fx:id="fldPhone" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="5" />
       <Line endY="170.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="5" GridPane.valignment="CENTER" />
-   </children>
+       </children>
    <padding>
       <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
    </padding>
