- Implementirana pasivna validacija - Implementirana rigoroznija validacija - Dodana utility klasa Validator u kojoj se nalaze metode za validaciju

--- a/resources/css/text_field_custom.css
+++ b/resources/css/text_field_custom.css
@@ -1,3 +1,9 @@
 .field-grey {
     -fx-background-color: lightgrey;
 }
+.fieldCorrect {
+-fx-control-inner-background: greenyellow;
+}
+.fieldNotCorrect {
+-fx-control-inner-background: lightpink;
+}
