--- a/resources/fxml/about.fxml
+++ b/resources/fxml/about.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.*?>
+
 <GridPane hgap="5.0" vgap="5.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.Controllers.AboutController">
    <rowConstraints>
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
@@ -27,6 +28,11 @@
       </Label>
       <Label text="Made by Aldin Kulaglić." GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
       <Label text="Don't really know how to copyright. :D" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onAction="#actionClose" text="%exit" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+         <padding>
+            <Insets bottom="4.0" left="15.0" right="15.0" top="4.0" />
+         </padding>
+      </Button>
    </children>
    <padding>
       <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
